--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.IntroKotlin903"
         tools:targetApi="31">
         <activity
-            android:name=".practica1.resultado"
+            android:name=".cinepolis.Cinepolis"
             android:exported="false" />
         <activity
-            android:name=".practica1.saludoActivity"
+            android:name=".practica2.OperasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".menu"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,16 +28,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.IntroKotlin903">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name=".practica1.resultado"
+            android:exported="false" />
+        <activity
+            android:name=".practica1.saludoActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
