--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.IntroKotlin903"
         tools:targetApi="31">
         <activity
+            android:name=".practica4.ArchivosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".practica3.Ejemplo3"
+            android:exported="false" />
+        <activity
             android:name=".cinepolis.Cinepolis"
             android:exported="false" />
         <activity
